Modified Train/Inference pipeline

--- a/FastAPI/app/Training_Server/cocoDataset/train_BLIP.ipynb
+++ b/FastAPI/app/Training_Server/cocoDataset/train_BLIP.ipynb
@@ -2,16 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['info', 'images', 'licenses', 'annotations'])\n",
+      "82783\n",
+      "{'license': 3, 'file_name': 'COCO_train2014_000000000009.jpg', 'coco_url': 'http://images.cocodataset.org/train2014/COCO_train2014_000000000009.jpg', 'height': 480, 'width': 640, 'date_captured': '2013-11-19 20:40:11', 'flickr_url': 'http://farm5.staticflickr.com/4026/4622125393_84c1fdb8d6_z.jpg', 'id': 9}\n",
+      "{'image_id': 9, 'id': 661611, 'caption': 'Closeup of bins of food that include broccoli and bread.'}\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import matplotlib\n",
     "from pprint import pprint\n",
     "\n",
     "\n",
-    "with open('./annotation/annotations/captions_train2014.json') as f:\n",
+    "with open('./annotations/annotations/captions_train2014.json') as f:\n",
     "    json_array = json.load(f)\n",
     "    print(json_array.keys())\n",
     "    print(len(json_array['images']))\n",
@@ -22,9 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -39,9 +59,10 @@
     "from tqdm.auto import tqdm\n",
     "\n",
     "class ImageCaptionDataset(Dataset):\n",
-    "    def __init__(self, annotations_path, processor):\n",
+    "    def __init__(self, annotations_path, processor, mode):\n",
     "        # annotations = dict_keys(['info', 'images', 'licenses', 'annotations'])\n",
-    "        self.mode = os.path.splitext(os.path.basename(annotations_path))[0].split('_')[-1]\n",
+    "        # self.mode = os.path.splitext(os.path.basename(annotations_path))[0].split('_')[-1]\n",
+    "        self.mode = mode\n",
     "        self.json_array = json.load(open(annotations_path))\n",
     "        self.dataset = {\n",
     "            'image_paths' : [],\n",
@@ -53,7 +74,7 @@
     "            # captions = annotation_json['captions']\n",
     "            \n",
     "            # add image_paths, caption for indexing\n",
-    "            self.dataset['image_paths'].append(Path(f'{self.mode}/{self.mode}/' + image_json['file_name']))\n",
+    "            self.dataset['image_paths'].append(Path(f'../{self.mode}/{self.mode}/' + image_json['file_name']))\n",
     "            self.dataset['captions'].append(annotation_json['caption']) \n",
     "        \n",
     "        # prepare processor for Natural Language Preprocessing\n",
@@ -75,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,17 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataset = ImageCaptionDataset('./annotation/annotations/captions_train2014.json', processor)\n",
+    "train_dataset = ImageCaptionDataset('../custom_dataset/custom_json.json', processor, 'custom_dataset')\n",
     "train_dataloader = DataLoader(train_dataset, shuffle=True, batch_size=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,13 +130,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch :  0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 33/33 [00:15<00:00,  2.14it/s, loss=6.6] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch :  1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 33/33 [00:14<00:00,  2.21it/s, loss=2.44]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch :  2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 33/33 [00:14<00:00,  2.24it/s, loss=1.42]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch :  3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 33/33 [00:14<00:00,  2.22it/s, loss=1.39]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch :  4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 33/33 [00:15<00:00,  2.20it/s, loss=1.38]\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
     "min_total_loss = math.inf\n",
-    "for epoch in range(50):\n",
+    "for epoch in range(5):\n",
     "    print(\"Epoch : \", epoch)\n",
     "    total_loss = 0\n",
     "    with tqdm(total=len(train_dataloader)) as pbar:\n",
@@ -138,8 +229,7 @@
     "            optimizer.step()\n",
     "            optimizer.zero_grad()\n",
     "    if min_total_loss > total_loss:\n",
-    "        torch.save(model.state_dict(), f\"BLIP_trainin_ver-{epoch}-{total_loss:.2f}.pt\")\n",
-    "        break"
+    "        torch.save(model.state_dict(), f\"BLIP_trainin_ver-{epoch}-{total_loss:.2f}.pt\")"
    ]
   },
   {
@@ -166,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
